--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,297 @@
-a
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap');
+
+html, body {
+    font-family: "Montserrat", sans-serif;
+    background-color: aliceblue;
+}
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1.1rem 5rem;
+    background: linear-gradient(180deg, #6fb4fd 0%, #5caafc 100%);
+}
+
+.brand a {
+    text-decoration: none;
+    font-size: 1.2rem;
+    font-weight: 600;
+    color: #fff;
+}
+
+ul {
+    display: flex;
+    flex-direction: row;
+}
+
+li {
+    list-style-type: none;
+    margin-left: 3rem;
+}
+
+li > a{
+    text-decoration: none;
+    color: #fff;
+    font-size: 0.9rem;
+    font-weight: 500;
+}
+
+
+li::after {
+    content: '';
+    width: 0rem;
+    height: 0.15rem;
+    background-color: #fff;
+    display: block;
+    border-radius: 0.2rem;
+    margin: 0.2rem auto 0 auto;
+    transition: all 0.3s ease-in-out;
+}
+
+li:hover::after {
+    width: 2rem;
+}
+
+.container{
+padding: 0px;
+}
+.container h1{
+  color: #6fb4fd;
+  text-align: center;
+  padding: 30px;
+}
+
+.container p{
+  text-align: center;
+  color: blue;
+  font-size: 18px;
+  padding: 20px;
+}
+.embed-content{
+  padding: 20px;
+}
+
+.embed-content h1{
+  font-size: 45px;
+  color: blue;
+}
+
+.player{
+
+    position: relative;
+    width: 300px;
+    height: 455px;
+    background: rgba(255, 255, 255, 0.15);
+    box-shadow: 20px 0 50px 80px rgba(red, green, blue, 0.377);
+    border-radius: 10% 10% 5% 5%;
+    padding: 20px;
+
+}
+.player .img{
+
+    position: relative;
+    width: 100%;
+    height: 400px;
+
+}
+
+.player .img img{
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 110%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10% 10% 0 0;
+
+}
+
+.wrapper {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin-top: 100px;
+    gap: 50px;
+}
+h1 {
+    text-align: center;
+    margin-top: 30px;
+}
+.wrapper .personal-pricing, .small-pricing, .enterprise-pricing {
+    width: 350px;
+    height: 500px;
+    background-color: #f6f6f6;
+    border-radius: 10px 10px 0px 0px;
+    border: 1px solid #ccc;
+}
+.wrapper .personal-pricing p:nth-of-type(1) {
+    width: 100%;
+    height: 50px;
+    font-size: 25px;
+    font-weight: bold;
+    text-align: center;
+    padding-top: 10px;
+    cursor: pointer;
+    border-radius: 10px 10px 0px 0px;
+    background-color: #e9e9e9;
+    border: none;
+}
+.wrapper .personal-pricing p:nth-of-type(2) {
+    width: 100%;
+    height: 50px;
+    font-size: 20px;
+    text-align: center;
+    padding-top: 12px;
+    background-color: #f5f5f5;
+    border: none;
+}
+.wrapper .personal-pricing p {
+    width: 100%;
+    height: 50px;
+    font-size: 18px;
+    text-align: center;
+    font-weight: bold;
+    padding-top: 14px;
+    background-color: #f9f9f9;
+    border-bottom: 1px solid #ccc;
+}
+.wrapper .personal-pricing button {
+    margin-top: 50px;
+    margin-left: 75px;
+    width: 200px;
+    height: 40px;
+    border: none;
+    color: white;
+    background-color: #006da3;
+    font-size: 19px;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: .2s;
+}
+.wrapper .personal-pricing button:hover {
+    background-color: #00476b;
+    transform: translateY(8px);
+}
+.wrapper .enterprise-pricing p:nth-of-type(1) {
+    width: 100%;
+    height: 50px;
+    font-size: 25px;
+    font-weight: bold;
+    text-align: center;
+    padding-top: 10px;
+    cursor: pointer;
+    border-radius: 10px 10px 0px 0px;
+    background-color: #e9e9e9;
+    border: none;
+}
+.wrapper .enterprise-pricing p:nth-of-type(2) {
+    width: 100%;
+    height: 50px;
+    font-size: 20px;
+    text-align: center;
+    padding-top: 12px;
+    background-color: #f5f5f5;
+    border: none;
+}
+.wrapper .enterprise-pricing p {
+    width: 100%;
+    height: 50px;
+    font-size: 18px;
+    font-weight: bold;
+    text-align: center;
+    padding-top: 14px;
+    background-color: #f9f9f9;
+    border-bottom: 1px solid #ccc;
+}
+.wrapper .enterprise-pricing button {
+    margin-top: 50px;
+    margin-left: 75px;
+    width: 200px;
+    height: 40px;
+    border: none;
+    color: white;
+    background-color: #006da3;
+    font-size: 19px;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: .2s;
+}
+.wrapper .enterprise-pricing button:hover {
+    background-color: #00476b;
+    transform: translateY(8px);
+}
+.wrapper .small-pricing {
+    margin-top: -50px;
+    height: 550px;
+}
+.wrapper .small-pricing #popular {
+    width: 300px;
+    padding: 10px;
+    margin: 25px;
+    border: none;
+    background-color: #009897;
+    color: #fff;
+    font-weight: bold;
+    border-radius: 10px;
+    cursor: pointer;
+    text-align: center;
+}
+.wrapper .small-pricing p:nth-of-type(1) {
+    width: 100%;
+    height: 50px;
+    font-size: 25px;
+    cursor: pointer;
+    font-weight: bold;
+    text-align: center;
+    padding-top: 10px;
+    border-radius: 10px 10px 0px 0px;
+    background-color: #e9e9e9;
+    border: none;
+}
+.wrapper .small-pricing p:nth-of-type(2) {
+    width: 100%;
+    height: 50px;
+    font-size: 20px;
+    text-align: center;
+    padding-top: 12px;
+    background-color: #f5f5f5;
+    border: none;
+}
+.wrapper .small-pricing p {
+    width: 100%;
+    height: 50px;
+    font-size: 18px;
+    text-align: center;
+    padding-top: 14px;
+    font-weight: bold;
+    background-color: #f9f9f9;
+    border-bottom: 1px solid #ccc;
+}
+.wrapper .small-pricing button {
+    margin-top: 30px;
+    margin-left: 75px;
+    width: 200px;
+    height: 40px;
+    border: none;
+    color: rgb(24, 60, 219);
+    background-color: rgb(19, 69, 231);
+    font-size: 19px;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: .2s;
+}
+.wrapper .small-pricing button:hover {
+    background-color: #960000;
+    transform: translateY(8px);
+}
